--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+python_version = ">=3.8"
 streamlit = "*"
 openai = "*"
 pdfquery = "*"
@@ -23,4 +24,4 @@ audio-recorder-streamlit = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+
