--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,13 @@ decorator==5.1.1
 Deprecated==1.2.14
 distro==1.8.0
 elevenlabs==0.2.26
+exceptiongroup==1.2.0
 executing==2.0.1
 faiss-cpu==1.7.4
 fastapi==0.104.1
 filelock==3.13.1
 flatbuffers==23.5.26
+fpdf==1.7.2
 frozenlist==1.4.0
 fsspec==2023.10.0
 gitdb==4.0.11
@@ -144,7 +146,7 @@ soupsieve==2.5
 SQLAlchemy==2.0.23
 stack-data==0.6.3
 starlette==0.27.0
-streamlit==1.28.1
+streamlit==1.29.0
 streamlit-chat==0.1.1
 sympy==1.12
 tenacity==8.2.3
@@ -152,6 +154,7 @@ threadpoolctl==3.2.0
 tiktoken==0.5.1
 tokenizers==0.14.1
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
@@ -165,6 +168,7 @@ urllib3==1.26.18
 uvicorn==0.24.0.post1
 uvloop==0.19.0
 validators==0.22.0
+watchdog==3.0.0
 watchfiles==0.21.0
 wcwidth==0.2.9
 websocket-client==1.6.4
